RFLS-69: Accordion pattern - Fix icons being too large on IE11.

--- a/assets/scss/partials/_accordions.scss
+++ b/assets/scss/partials/_accordions.scss
@@ -15,6 +15,8 @@
     float: right;
 
     content: svg("plus.svg");
+    width: 18px;
+    height: 18px;
   }
 
   &[aria-expanded="true"] {
